# amplicon-analysis-agent

./: .dockerignore  .gitignore  .mcp.json.example  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  EMO_INTEGRATION.md  MODULE_CATALOG.md
examples/demo/: abundance.csv  metadata.csv  taxonomy.csv
r/: run_analysis.R  write_report.R
r/emo/: PROVENANCE.md  VenSuper.micro.R  amp_common.R  cir_barplot.micro.R  cir_plot.micro.R  cluMicro.bar.micro.R  cluster.micro.R  compatibility.json  distance.micro.R  ggVen.Upset.micro.R  ggflower.micro.R  mantal.micro.R  maptree.micro.R  ordinate.micro.R  sankey.m.Group.micro.R  sankey.micro.R  script_alpha.R  script_alpha_PD.R  script_alpha_rarefaction.R  script_bagging.R  script_barplot.R  script_bnti.R  script_bnti_rcbray.R  script_decision_tree.R  script_deseq2.R  script_edger.R  script_feast.R  script_function_bubble.R  script_function_diff.R  script_heatmap.R  script_kegg_enrich.R  script_lasso.R  script_lda.R  script_loading_pca.R  script_manhattan.R  script_microtest.R  script_naive_bayes.R  script_network.R  script_network_properties.R  script_network_robustness.R  (+18 more)
scripts/: build_report.py  demo_run.py  export_module_catalog.py  update_compatibility_from_manifest.py
skills/amplicon-analysis/: SKILL.md
skills/amplicon-analysis/references/: modules.md
src/amplicon_agent/: __init__.py  inputs.py  mcp_server.py  models.py  module_registry.py  module_specs.py  report_builder.py  security.py  service.py  store.py
tests/: test_approval.py  test_inputs.py  test_report_builder.py
